date overlap fix in progress

--- a/components/Table/Sort/Gain/Select/Picker/Picker.module.css
+++ b/components/Table/Sort/Gain/Select/Picker/Picker.module.css
@@ -11,7 +11,6 @@
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  z-index: 10;
 
   padding: 10px;
   height: 20px;
@@ -52,13 +51,11 @@
   align-items: center;
   flex-direction: column;
   position: absolute;
-  z-index: 5;
 
   width: 200px;
   height: 200px;
   border-radius: 5px;
   background-color: white;
-
   transition: all 0.3s ease;
 }
 
