--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,7 @@
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
   overflow-x: hidden;
-
   margin: auto;
 }
 
